--- a/CSS/Pozadina/Z1css-body.html
+++ b/CSS/Pozadina/Z1css-body.html
@@ -10,5 +10,55 @@
 <p>Dolor praesentium provident rem repudiandae.</p>
 <link rel="stylesheet" href="Z1css-body.css">
 <h1 class="center">Crveno i poravnato po sredini</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium aperiam architecto dolorum fuga itaque modi
+  natus nulla praesentium velit.</p>
+<p>Alias delectus dolore earum fugit. A alias deserunt inventore porro possimus qui quod repudiandae totam! Debitis
+  omnis quas quod repellat!</p>
+<p>Debitis maxime nulla pariatur. Consectetur consequuntur, dolorum excepturi exercitationem fugit, illo impedit libero
+  maxime minima neque qui quibusdam, sed vero?</p>
+<p>Dicta iusto labore nesciunt porro quas vitae! Aperiam consequatur, culpa doloribus facilis fugit hic impedit magni
+  modi repellat voluptatem voluptatum.</p>
+<p>Aut enim eveniet, ex illo in ipsa iste magnam maxime nihil non odio omnis perspiciatis possimus, praesentium soluta,
+  suscipit totam.</p>
+<p>Ad aut, blanditiis dolorum esse est, facere ipsum labore nihil, nobis officiis porro recusandae saepe suscipit
+  voluptate voluptatum? Tempore, vitae!</p>
+<p>Aliquid atque, dolor dolores eius eligendi est ex exercitationem libero quisquam repellendus reprehenderit, saepe
+  sapiente sunt totam vel veritatis voluptates.</p>
+<p>Doloribus laborum nisi porro quidem quo rem ullam. Ad doloremque in nesciunt nisi placeat quas repellat rerum vero
+  voluptas voluptatibus.</p>
+<p>Aliquam animi at beatae cumque eaque expedita harum, illo ipsum labore magni, mollitia nulla numquam sequi unde vitae
+  voluptate voluptates?</p>
+<p>Accusantium adipisci distinctio eligendi et maxime minima modi perferendis quisquam temporibus unde! At atque
+  delectus earum fugiat modi placeat, quae?</p>
+<p>Dolorum ea earum enim error et eveniet fugiat iste itaque laboriosam maxime molestias nemo quam quo repellat, unde.
+  Cupiditate, pariatur.</p>
+<p>At est et libero, modi necessitatibus quo veritatis vero. Aliquid animi aut deleniti eveniet exercitationem nam nihil
+  pariatur perspiciatis voluptatibus!</p>
+<p>A dolore dolores earum enim fuga in iusto natus nostrum, obcaecati placeat praesentium quis tenetur ut! Deleniti ea
+  maiores nihil?</p>
+<p>Adipisci aliquam architecto consequuntur culpa dolore doloribus ducimus ex facere iusto laborum, nesciunt omnis
+  reiciendis repellat reprehenderit unde voluptas voluptatum!</p>
+<p>A accusamus accusantium aliquam architecto at consequatur eius est facilis labore, libero nemo nesciunt nihil
+  provident, rerum sed unde vero.</p>
+<p>Eligendi facilis ipsa iusto, minima nulla optio quae! Ad, consequuntur dicta eveniet exercitationem illum natus
+  pariatur quae reprehenderit tenetur vero.</p>
+<p>Aperiam dolor, dolore dolores earum explicabo fuga, hic maxime molestias, nam necessitatibus nihil nobis quidem quis
+  quos repellat sequi veritatis.</p>
+<p>A delectus dolore doloremque dolores, enim odio quis saepe tempora? Assumenda corporis enim exercitationem inventore
+  nemo nobis quae quidem, sapiente.</p>
+<p>Ab ad aliquid animi culpa, deserunt, doloremque doloribus fugiat illo ipsam iusto praesentium quidem quis rem
+  repellat sapiente ut vel.</p>
+<p>A ducimus ea, expedita nisi quos reprehenderit sapiente ullam vitae voluptates voluptatibus. A aut commodi
+  necessitatibus nobis non placeat, rem.</p>
+<p>Aliquid asperiores commodi dolores eveniet illo maxime molestias nihil perspiciatis quasi sunt. Harum, inventore
+  magni molestias nesciunt omnis optio quam.</p>
+<p>Ad aspernatur consequatur, dolorem hic ipsum perspiciatis? Accusantium animi beatae consequuntur eaque hic, inventore
+  laudantium mollitia repellat sint tempore veniam.</p>
+<p>Architecto culpa doloremque excepturi, facilis laboriosam maiores rerum tempora voluptate? Aliquam, aut consequuntur
+  deserunt labore nostrum quasi repudiandae similique voluptatibus.</p>
+<p>Ab adipisci beatae eius exercitationem, incidunt magni officiis tenetur voluptas! Ad dolor iure laudantium possimus
+  similique! Reiciendis rem repellendus sint.</p>
+<p>Aliquam aliquid dicta dignissimos eos expedita hic itaque iure, magnam modi mollitia odit optio perspiciatis quod
+  repellat, unde? In, quidem!</p>
 </body>
 </html>
